--- a/ManagedWin32.csproj
+++ b/ManagedWin32.csproj
@@ -54,7 +54,30 @@
     <Compile Include="Api\User32\Delegates\EnumWindowsProc.cs" />
     <Compile Include="Api\User32\Delegates\HookProc.cs" />
     <Compile Include="Api\User32\Delegates\WindowProcedureHandler.cs" />
-    <Compile Include="Api\User32\Enumerations\Enumerations.cs" />
+    <Compile Include="Api\User32\Enumerations\AnimateWindowFlags.cs" />
+    <Compile Include="Api\User32\Enumerations\BitmapImageCompression.cs" />
+    <Compile Include="Api\User32\Enumerations\DesktopAccessRights.cs" />
+    <Compile Include="Api\User32\Enumerations\ModifierKeyCodes.cs" />
+    <Compile Include="Api\User32\Enumerations\KeyCode.cs" />
+    <Compile Include="Api\User32\Enumerations\ShutdownFlags.cs" />
+    <Compile Include="Api\User32\Enumerations\GetWindowEnum.cs" />
+    <Compile Include="Api\User32\Enumerations\SetWindowPositionFlags.cs" />
+    <Compile Include="Api\User32\Enumerations\ScrollBarDirection.cs" />
+    <Compile Include="Api\User32\Enumerations\RegionResult.cs" />
+    <Compile Include="Api\User32\Enumerations\SendMessageTimeoutFlags.cs" />
+    <Compile Include="Api\User32\Enumerations\WindowStyles.cs" />
+    <Compile Include="Api\User32\Enumerations\GetWindowLongValue.cs" />
+    <Compile Include="Api\User32\Enumerations\SystemInfoParamsAction.cs" />
+    <Compile Include="Api\User32\Enumerations\BootMode.cs" />
+    <Compile Include="Api\User32\Enumerations\SystemMetrics.cs" />
+    <Compile Include="Api\User32\Enumerations\WindowPlacementFlags.cs" />
+    <Compile Include="Api\User32\Enumerations\ShowWindowFlags.cs" />
+    <Compile Include="Api\User32\Enumerations\EventObjects.cs" />
+    <Compile Include="Api\User32\Enumerations\WinEventHookFlags.cs" />
+    <Compile Include="Api\User32\Enumerations\WinEvent.cs" />
+    <Compile Include="Api\User32\Enumerations\Orientation.cs" />
+    <Compile Include="Api\User32\Enumerations\BeepType.cs" />
+    <Compile Include="Api\User32\Enumerations\WindowsMessage.cs" />
     <Compile Include="Api\Kernel32\Structures\ProcessInfo.cs" />
     <Compile Include="Api\Kernel32\Structures\RGBQuad.cs" />
     <Compile Include="Api\Kernel32\Structures\StartUpInfo.cs" />
@@ -90,6 +113,14 @@
     <Compile Include="Api\PSApi.cs" />
     <Compile Include="Api\Shell32\Shell32.cs" />
     <Compile Include="Api\User32\Structures\BlendFunction.cs" />
+    <Compile Include="Api\User32\Structures\ScrollInfo.cs" />
+    <Compile Include="Api\User32\Structures\WindowInfo.cs" />
+    <Compile Include="Api\User32\Structures\WindowPlacement.cs" />
+    <Compile Include="Api\User32\Structures\IconInfo.cs" />
+    <Compile Include="Api\User32\Structures\CursorInfo.cs" />
+    <Compile Include="Api\User32\Structures\WindowClass.cs" />
+    <Compile Include="Api\User32\Structures\BitmapInfoHeader.cs" />
+    <Compile Include="Api\User32\Structures\BitmapInfo.cs" />
     <Compile Include="Api\User32\Structures\FlashWindowInfo.cs" />
     <Compile Include="Api\User32\Structures\Structures.cs" />
     <Compile Include="Api\User32\Enumerations\LoadImageTypes.cs" />
